deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: franklyn3-db-deployment
  namespace: student-t-stuetz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: franklyndatabase
  template:
    metadata:
      labels:
        app: franklyndatabase
    spec:
      containers:
        - name: franklyndatabase
          image: postgres
          ports:
            - containerPort: 5432
              name: "postgres"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: franklyn3-backend-deployment
  namespace: student-t-stuetz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: franklyn3-backend
  template:
    metadata:
      labels:
        app: franklyn3-backend
    spec:
      volumes:
        - name: shared-data
          emptyDir: { }
      containers:
        - name: franklyn3-imageserver
          image: nginx
          volumeMounts:
            - name: shared-data
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
        - name: franklyn3-backend
          image: ghcr.io/htl-leonding-project/franklyn-quarkus-backend
          volumeMounts:
            - name: shared-data
              mountPath: /t.stuetz/franklyn3/tmp/file-upload/exams
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: franklyn3-frontend-deployment
  namespace: student-t-stuetz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: franklyn3-frontend
  template:
    metadata:
      labels:
        app: franklyn3-frontend
    spec:
      containers:
        - name: franklyn3-frontend
          image: ghcr.io/htl-leonding-project/franklyn-quarkus-frontend
          ports:
            - containerPort: 80
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: franklyn3-backend-svc
  namespace: student-t-stuetz
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: franklyn3-backend
---
apiVersion: v1
kind: Service
metadata:
  name: franklyn3-imageserver-svc
  namespace: student-t-stuetz
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: franklyn3-backend
---
apiVersion: v1
kind: Service
metadata:
  name: franklyn3-frontend-svc
  namespace: student-t-stuetz
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: franklyn3-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: franklyn3-database-svc
  namespace: student-t-stuetz
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: franklyndatabase
  selector:
    app: franklyndatabase
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: franklyn3-backend-ingress
  namespace: student-t-stuetz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /t.stuetz/franklyn3/api(/|$)(.*)$
            pathType: Prefix
            backend:
              service:
                name: franklyn3-backend-svc
                port:
                  number: 80
          - path: /t.stuetz/franklyn3/tmp/file-upload/exams(/|$)(.*)$
            pathType: Prefix
            backend:
              service:
                name: franklyn3-imageserver-svc
                port:
                  number: 80
          - path: /t.stuetz/franklyn3(/|$)(.*)$
            pathType: Prefix
            backend:
              service:
                name: franklyn3-frontend-svc
                port:
                  number: 80
